// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tree > support switcherLoadingIcon prop when loadData 1`] = `
<div
  class="ant-tree ant-tree-icon-hide css-var-root"
>
  <div
    aria-hidden="true"
    class="ant-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="ant-tree-indent"
    >
      <div
        class="ant-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="ant-tree-list"
    role="tree"
    style="position: relative;"
    tabindex="0"
  >
    <div
      class="ant-tree-list-holder"
    >
      <div>
        <div
          class="ant-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="false"
            class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
            draggable="false"
            id="test-id-0-0"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            />
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              switcherIcon
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="---"
            >
              <span
                class="ant-tree-title"
              >
                ---
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="false"
            class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-loading"
            draggable="false"
            id="test-id-0-0-2"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              <div>
                loading...
              </div>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="node1"
            >
              <span
                class="ant-tree-iconEle ant-tree-icon__open ant-tree-icon_loading"
              />
              <span
                class="ant-tree-title"
              >
                node1
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="false"
            class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-loading ant-tree-treenode-leaf-last"
            draggable="false"
            id="test-id-0-0-3"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              <div>
                loading...
              </div>
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="node2"
            >
              <span
                class="ant-tree-iconEle ant-tree-icon__open ant-tree-icon_loading"
              />
              <span
                class="ant-tree-title"
              >
                node2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree > switcherIcon in Tree could be string 1`] = `
<div
  class="ant-tree ant-tree-icon-hide css-var-root"
>
  <div
    aria-hidden="true"
    class="ant-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="ant-tree-indent"
    >
      <div
        class="ant-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="ant-tree-list"
    role="tree"
    style="position: relative;"
    tabindex="0"
  >
    <div
      class="ant-tree-list-holder"
    >
      <div>
        <div
          class="ant-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="false"
            class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
            draggable="false"
            id="test-id-0-0"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            />
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              switcherIcon
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="---"
            >
              <span
                class="ant-tree-title"
              >
                ---
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf"
            draggable="false"
            id="test-id-0-0-2"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="node1"
            >
              <span
                class="ant-tree-title"
              >
                node1
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last ant-tree-treenode-leaf"
            draggable="false"
            id="test-id-0-0-3"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="node2"
            >
              <span
                class="ant-tree-title"
              >
                node2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree > switcherIcon should be loading icon when loadData 1`] = `
<div
  class="ant-tree ant-tree-icon-hide css-var-root"
>
  <div
    aria-hidden="true"
    class="ant-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="ant-tree-indent"
    >
      <div
        class="ant-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="ant-tree-list"
    role="tree"
    style="position: relative;"
    tabindex="0"
  >
    <div
      class="ant-tree-list-holder"
    >
      <div>
        <div
          class="ant-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="false"
            class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
            draggable="false"
            id="test-id-0-0"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            />
            <span
              class="ant-tree-switcher ant-tree-switcher_open"
            >
              switcherIcon
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
              title="---"
            >
              <span
                class="ant-tree-title"
              >
                ---
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="ant-tree-treenode ant-tree-treenode-switcher-close"
            draggable="false"
            id="test-id-0-0-2"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher_close"
            >
              switcherIcon
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
              title="node1"
            >
              <span
                class="ant-tree-title"
              >
                node1
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
            draggable="false"
            id="test-id-0-0-3"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="ant-tree-indent"
            >
              <span
                class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
              />
            </span>
            <span
              class="ant-tree-switcher ant-tree-switcher_close"
            >
              switcherIcon
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
              title="node2"
            >
              <span
                class="ant-tree-title"
              >
                node2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
